src/main.css
/* Copyright 2023 iiPython */

/* Taken from DmmD.css */
:root {
    --c-red: #FF4F4F;
    --c-gray: #8F8F8F;
    --c-green: #4FFF4F;
}

/* Normal styles */
td {
    padding: 10px;
    position: relative;
    border: 1px solid #fff;
}
td p {
    margin: 0px;
    margin-bottom: 10px;
}
td p.state  {
    position: absolute;
    top: 10px;
    right: 10px;
}
td p.no-margin {
    margin-bottom: 0px;
}
a:hover {
    color: #2F7FBF;
    text-decoration: underline;
}
.status-container {
    display: flex;
    gap: 3px;
}
.indicator {
    height: 20px;
    width: 10px;
    opacity: .75;
}
.indicator:hover {
    opacity: 1;
}

/* Popper popups */
div.tooltip {
    z-index: 999;
    padding: 10px;
    background-color: #000;
    border: 1px solid #fff;
    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
}
div.tooltip p {
    margin: 0px;
}
[data-darkreader-mode = "dynamic"] div.tooltip {
    background-color: #181a1b;
}

/* Colored CSS styles */
.i-down { background-color: var(--c-red); }
.i-unknown { background-color: var(--c-gray); }
.i-online { background-color: var(--c-green); }
.color-red { color: var(--c-red); }
.color-green { color: var(--c-green); }

